[package]
name = "repy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
zip = "2.2.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.88"

[dev-dependencies]
mockito = "1.5.0"
tempfile = "3.12.0"
